feat!: add mobile menu with styles
Added mobile menu with hamburger button. Added styles including for
adaptability.

Added styles for the schedule table, including for adaptability.

BREAKING_CHANGE: event handlers don't work on mobile menu.

--- a/src/auth/index.html
+++ b/src/auth/index.html
@@ -61,7 +61,7 @@
 						&ensp; С помощью нашего приложения пользователи могут легко и быстро
 						забронировать время для визита, выбрав удобного специалиста и нужные
 						услуги...
-						<button class="info__text-mobile-show-button button">
+						<button class="info__text-mobile-show-button button" type="button">
 							Читать полностью
 						</button>
 					</p>
